almost finished with image stacking

--- a/ASSETS/SASS/_components.scss
+++ b/ASSETS/SASS/_components.scss
@@ -1,12 +1,9 @@
-img {
-  display: inline-block;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  margin: 0 20px 0 20px;
-}
+@use "./variables" as v;
+
 // banner section starts
+
 .banner {
-  background: linear-gradient(to right, #2e5732, #4e9955);
+  background: linear-gradient(to right, v.$primary--color, v.$secondary--color);
 }
 // banner section ends
 // navbar section starts
@@ -19,9 +16,20 @@ img {
 
 .navbar {
   width: 60%;
-  border: solid 2px green;
+
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 // navbar section ends
+
+// footer starts
+
+footer {
+  background: linear-gradient(to right, v.$primary--color, v.$secondary--color);
+}
+
+.copyright {
+  color: white;
+  padding: 50px;
+}
