--- a/ASSETS/SASS/_global.scss
+++ b/ASSETS/SASS/_global.scss
@@ -1,3 +1,5 @@
+@use "./variables" as v;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,4 +8,10 @@
 body,
 html {
   height: 100%;
+  font-family: v.$main--font;
+  // background-image: url(../Images/banner-image-cooking.jpg);
+
+  // // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-position: center;
 }
