--- a/ASSETS/SASS/_layout.scss
+++ b/ASSETS/SASS/_layout.scss
@@ -3,10 +3,17 @@
 .container {
   margin: 0 auto;
   max-width: v.$site-width;
-  border: solid 2px brown;
+  border: 2px solid red;
 }
 
 .banner-text {
   display: flex;
   justify-content: center;
+}
+
+figure {
+  display: flex;
+  // grid-template-columns: 1fr 1fr 1fr 1fr;
+  max-width: 1440px;
+  flex-wrap: wrap;
 }
