--- a/ASSETS/SASS/_typography.scss
+++ b/ASSETS/SASS/_typography.scss
@@ -1,3 +1,5 @@
+@use "./variables" as v;
+
 .banner h1 {
   display: inline-block;
   color: white;
@@ -15,11 +17,12 @@
   padding-bottom: 10px;
 }
 
-.navbar p {
-  font-weight: 1000;
+.navbar a {
+  font-weight: 500;
   font-size: 2rem;
   padding: 20px;
   text-transform: capitalize;
-  color: white;
-  -webkit-text-stroke: 0.7px black;
+  color: rgb(88, 68, 68);
+
+  text-decoration: none;
 }
