--- a/ASSETS/SASS/_global.scss
+++ b/ASSETS/SASS/_global.scss
@@ -9,6 +9,12 @@ body,
 html {
   height: 100%;
   font-family: v.$main--font;
+
+  header {
+    position: sticky;
+    top: 0;
+  }
+
   // background-image: url(../Images/banner-image-cooking.jpg);
 
   // // background-repeat: no-repeat;
