update with option menu functionality

--- a/ASSETS/SASS/_components.scss
+++ b/ASSETS/SASS/_components.scss
@@ -28,3 +28,9 @@
 footer {
   background: linear-gradient(to right, v.$primary--color, v.$secondary--color);
 }
+
+// SWEETS section BEGINS
+
+.sweet-treats {
+  text-align: center;
+}
