--- a/ASSETS/SASS/_components.scss
+++ b/ASSETS/SASS/_components.scss
@@ -31,6 +31,9 @@ footer {
 
 // SWEETS section BEGINS
 
-.sweet-treats {
+.menu {
   text-align: center;
+  margin-top: 20px;
+  width: 80%;
+  margin-left: 10%;
 }
