--- a/ASSETS/SASS/_layout.scss
+++ b/ASSETS/SASS/_layout.scss
@@ -14,9 +14,10 @@
   clear: both;
 }
 
-// figure {
-//   display: flex;
-//   // grid-template-columns: 1fr 1fr 1fr 1fr;
-//   max-width: 1440px;
-//   flex-wrap: wrap;
-// }
+.grid {
+  display: grid;
+}
+
+.grid-2col {
+  grid-template-columns: 1fr 1fr;
+}
