--- a/ASSETS/SASS/_images.scss
+++ b/ASSETS/SASS/_images.scss
@@ -16,7 +16,7 @@ img {
 
 .rose_image {
   display: inline-block;
-  padding-top: 20px;
+
   padding-bottom: 20px;
   margin: 0 20px 0 20px;
 }
@@ -116,6 +116,7 @@ img {
   margin: 50px 0;
   &:hover .image-slider {
     animation-play-state: paused;
+    cursor: pointer;
   }
 }
 
