--- a/ASSETS/SASS/_global.scss
+++ b/ASSETS/SASS/_global.scss
@@ -7,17 +7,13 @@
 
 body,
 html {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: v.$main--font;
 
   header {
     position: sticky;
     top: 0;
   }
-
-  // background-image: url(../Images/banner-image-cooking.jpg);
-
-  // // background-repeat: no-repeat;
-  // background-size: cover;
-  // background-position: center;
 }
