--- a/ASSETS/SASS/_typography.scss
+++ b/ASSETS/SASS/_typography.scss
@@ -65,9 +65,18 @@
   margin: 20px 20px;
   word-spacing: 10px;
   width: 70%;
+  text-align: center;
+  margin: 0 auto;
+  p {
+    margin-top: 20px;
+  }
 }
 
 .recipe-gap {
+  margin-top: 20px;
+}
+
+.recipe-img {
   margin-top: 20px;
 }
 
