--- a/ASSETS/SASS/_components.scss
+++ b/ASSETS/SASS/_components.scss
@@ -32,6 +32,12 @@
   margin-top: 20px;
   width: 30%;
   margin-left: 35%;
+  option {
+    text-transform: capitalize;
+  }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 // footer STARTS
