--- a/ASSETS/SASS/_layout.scss
+++ b/ASSETS/SASS/_layout.scss
@@ -27,7 +27,7 @@
 .recipe {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 100px 1fr 300px;
+  // grid-template-rows: 100px 1fr 500px;
   grid-template-areas: "header header" "ingredients image" "instructions instructions";
 }
 
@@ -46,4 +46,5 @@
 
 .recipe-instructions {
   grid-area: instructions;
+  margin: 30px;
 }
