--- a/ASSETS/SASS/_images.scss
+++ b/ASSETS/SASS/_images.scss
@@ -113,7 +113,7 @@ img {
   margin-top: 20px;
   overflow: hidden;
   white-space: nowrap;
-  margin: 50px 0;
+  margin: 50px 50px;
 
   &:hover .image-slider {
     animation-play-state: paused;
@@ -124,6 +124,12 @@ img {
 .image-slider {
   display: inline-block;
   animation: 50s slider infinite linear;
+  overflow: hidden;
+  padding: 5px;
+  padding-right: 5px;
+  img {
+    width: 15%;
+  }
 }
 
 @keyframes slider {
