--- a/ASSETS/SASS/_images.scss
+++ b/ASSETS/SASS/_images.scss
@@ -119,14 +119,20 @@ img {
 
 // ENDS images of food on homepage
 
+// START images for recipe pages
+
+.recipe-img {
+  width: 95%;
+  padding: 20px;
+}
+
 // START image carousel slider on selection pages (eg. sweets, breads, chicken)
 
 .image-banner {
   margin-top: 20px;
   overflow: hidden;
   white-space: nowrap;
-  margin: 50px 50px;
-
+  margin: 0 auto;
   &:hover .image-slider {
     animation-play-state: paused;
     cursor: pointer;
@@ -141,6 +147,10 @@ img {
   padding-right: 5px;
   img {
     width: 15%;
+  }
+  @media (max-width: 750px) {
+    height: 100px;
+    width: 100%;
   }
 }
 
