--- a/ASSETS/SASS/_typography.scss
+++ b/ASSETS/SASS/_typography.scss
@@ -68,6 +68,9 @@
   font-weight: 800;
   li {
     margin-top: 10px;
+    @media (max-width: 750px) {
+      font-size: 0.7rem;
+    }
   }
   li::first-letter {
     text-transform: capitalize;
@@ -84,6 +87,9 @@
   place-items: center;
   li {
     margin-top: 20px;
+    @media (max-width: 750px) {
+      font-size: 0.7rem;
+    }
   }
   li::first-letter {
     text-transform: capitalize;
