--- a/ASSETS/SASS/_typography.scss
+++ b/ASSETS/SASS/_typography.scss
@@ -8,6 +8,7 @@
   text-transform: capitalize;
   padding-top: 20px;
   padding-bottom: 20px;
+
   font-size: 2.5rem;
 }
 
@@ -92,6 +93,9 @@
     }
   }
   li::first-letter {
+    text-transform: capitalize;
+  }
+  h3 {
     text-transform: capitalize;
   }
 }
