--- a/ASSETS/SASS/_images.scss
+++ b/ASSETS/SASS/_images.scss
@@ -3,7 +3,6 @@
 img {
   object-fit: cover;
   object-position: center center;
-  margin: 10px;
 }
 
 .col-4 {
@@ -14,8 +13,9 @@ img {
   }
 }
 
-.rose_image {
+.rose-image {
   display: inline-block;
+  margin: 10px;
 }
 // ENDS banner at top of page
 
@@ -70,7 +70,7 @@ img {
     width: 350px;
   }
   @media (max-width: 750px) {
-    height: 220px;
+    height: 180px;
   }
 }
 
@@ -80,7 +80,7 @@ img {
     width: 350px;
   }
   @media (max-width: 750px) {
-    height: 50px;
+    height: 90px;
   }
 }
 
