--- a/ASSETS/SASS/_images.scss
+++ b/ASSETS/SASS/_images.scss
@@ -148,6 +148,7 @@ img {
   padding-right: 5px;
   img {
     width: 15%;
+    margin: 10px;
   }
   @media (max-width: 750px) {
     height: 100px;
