--- a/ASSETS/SASS/_typography.scss
+++ b/ASSETS/SASS/_typography.scss
@@ -107,3 +107,11 @@
 }
 
 // recipes page ENDS
+
+// meal planner page BEGINS
+.meal-planner-heading {
+  text-transform: capitalize;
+  color: v.$primary--color;
+  text-align: center;
+  font-size: 1.5em;
+}
