--- a/ASSETS/SASS/_components.scss
+++ b/ASSETS/SASS/_components.scss
@@ -97,6 +97,12 @@
   }
 }
 
+.list-items,
+li {
+  display: flex;
+  justify-content: space-between;
+}
+
 // input for the meal planner + ADD button ENDS
 
 // footer STARTS
