--- a/ASSETS/SASS/_typography.scss
+++ b/ASSETS/SASS/_typography.scss
@@ -115,3 +115,14 @@
   text-align: center;
   font-size: 1.5em;
 }
+
+.list-items,
+li {
+  text-transform: capitalize;
+  font-size: 1.2em;
+  padding-bottom: 50px;
+  color: v.$primary--color;
+  button {
+    padding: 5px 20px;
+  }
+}
