--- a/ASSETS/SASS/_typography.scss
+++ b/ASSETS/SASS/_typography.scss
@@ -6,9 +6,11 @@
   display: inline-block;
   color: white;
   text-transform: capitalize;
-  padding-top: 20px;
-
-  font-size: 2.5rem;
+  padding-top: 90px;
+  font-size: 3.5rem;
+  @media (max-width: 750px) {
+    font-size: 2em;
+  }
 }
 
 .banner-caption p {
@@ -20,10 +22,10 @@
 
 .navbar a {
   font-weight: 500;
-  font-size: 2rem;
-  padding: 20px;
+  font-size: 1.5rem;
+  padding: 10px;
   text-transform: capitalize;
-  color: rgb(88, 68, 68);
+  color: rgb(30, 47, 20);
   text-decoration: none;
 
   @media (max-width: 900px) {
@@ -46,6 +48,7 @@
   text-transform: capitalize;
   text-align: center;
   font-size: 2rem;
+  margin: 20px;
   color: v.$primary--color;
   @media (max-width: 750px) {
     font-size: 1rem;
